--- a/vantage6-ui/src/app/components/node/node-table/node-table.component.scss
+++ b/vantage6-ui/src/app/components/node/node-table/node-table.component.scss
@@ -1,7 +1,3 @@
-.mat-column-details {
-    max-width: 50px;
-}
-
 .dropdown-subsection {
     margin-left: 10px;
     font-style: italic;
